style.css
/** @format */

button {
	background-color: #0c80f3;
	border: 6px solid #0ff166;
	border-radius: 10px;
}

.game-board {
	width: 600px;
	height: 600px;
	margin: 0 auto;
	background-color: #34495e;
	color: rgb(204, 28, 28);
	border: 6px solid #0b0d0f;
	border-radius: 10px;
	display: grid;
	grid-template-rows: 1fr 1fr 1fr;
	grid-template-columns: 1fr;
}

.grid-row {
	border: 6px solid #739dc7;
	border-radius: 6px;
	font-family: Helvetica;
	font-weight: bold;
	font-size: 4em;
	display: grid;
	grid-template-rows: 1fr;
	grid-template-columns: 1fr 1fr 1fr;
	background-color: rgb(175, 70, 70);
}

.block {
	background-color: rgb(219, 28, 28);
	border: 6px solid green;
	border-radius: 6px;
	font-family: Helvetica;
	font-weight: bold;
	font-size: 20em;
}

.red {
	color: red;
}

.white {
	color: white;
}

/** 
 
*/

#game {
	width: 100%;
	height: 500;
	background-color: rgb(73, 207, 222);

	border: solid rgb(17, 17, 18);
	margin: auto;
}

.myFlexcontainer {
	display: grid;
	width: 500px;
	height: 500px;
}
.demoBox {
	display: inline-flex;
	background-color: pink;
	border: 1px solid black;
	border-radius: 25%;
	padding: 2em;
}
.pic-boita {
	width: 050px;
	height: 050px;
	display: flex; /* Enable flexbox layout */
	align-items: center; /* Center items vertically */
	justify-content: center; /* Center items horizontally */
}
.centered-img {
	max-width: 100%; /* Scale down large images */
	width: 50px;
	height: 50px;
	border-radius: 50%;
}
.squared-img {
	max-width: 100%; /* Scale down large images */
	width: 50px;
	height: 50px;
}

